--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,12 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+
+modVersion = 0.2.0
+modMinecraftVersion = 1.15.1
+modForgeVersion = 30.0.16
+mappingChannel = snapshot
+mappingVersion = 20191226-1.14.3
+modid = craftingspawn
+modGroup = trainerlord.craftingspawn
+modFileName = Crafting Spawn
