--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -12,7 +12,7 @@ loaderVersion="[26,)" #mandatory (26 is current forge version)
 # The modid of the mod
 modId="craftingspawn" #mandatory
 # The version number of the mod - there's a few well known ${} variables useable here or just hardcode it
-version="0.0.4" #mandatory
+version="0.2.0" #mandatory
  # A display name for the mod
 displayName="Crafting Spawn" #mandatory
 # A URL for the "homepage" for this mod, displayed in the mod UI
@@ -24,21 +24,21 @@ authors="Trainerlord - Developer" #optional
 description='''
 A Mod That Allows You To Craft Spawners'''
 # A dependency - use the . to indicate dependency for a specific modid. Dependencies are optional.
-[[dependencies.philosopher]] #optional
+[[dependencies.craftingspawn]] #optional
     # the modid of the dependency
     modId="forge" #mandatory
     # Does this dependency have to exist - if not, ordering below must be specified
     mandatory=true #mandatory
     # The version range of the dependency
-    versionRange="[27,)" #mandatory
+    versionRange="[30,)" #mandatory
     # An ordering relationship for the dependency - BEFORE or AFTER required if the relationship is not mandatory
     ordering="NONE"
     # Side this dependency is applied on - BOTH, CLIENT or SERVER
     side="BOTH"
 # Here's another dependency
-[[dependencies.philosopher]]
+[[dependencies.craftingspawn]]
     modId="minecraft"
     mandatory=true
-    versionRange="[1.14.3]"
+    versionRange="[1.15.1]"
     ordering="NONE"
     side="BOTH"
