Added Spawner Harvester
*Moved To Fabric

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,13 +1,17 @@
-# Sets default memory used for gradle commands. Can be overridden by user or command line properties.
-# This is required to provide enough memory for the Minecraft decompilation process.
-org.gradle.jvmargs=-Xmx3G
-org.gradle.daemon=false
+# Done to increase the memory available to gradle.
+org.gradle.jvmargs=-Xmx1G
 
-modVersion = 0.2.0
-modMinecraftVersion = 1.15.1
-modForgeVersion = 30.0.16
-mappingChannel = snapshot
-mappingVersion = 20191226-1.14.3
-modid = craftingspawn
-modGroup = trainerlord.craftingspawn
-modFileName = Crafting Spawn
+# Fabric Properties
+	# check these on https://fabricmc.net/use
+	minecraft_version=1.15.2
+	yarn_mappings=1.15.2+build.14
+	loader_version=0.7.8+build.184
+
+# Mod Properties
+	mod_version = 0.2.2
+	maven_group = net.craftingspawn
+	archives_base_name = fabric-example-mod
+
+# Dependencies
+	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
+	fabric_version=0.4.32+build.292-1.15
