--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'fabric-loom' version '0.2.6-SNAPSHOT'
+	id 'fabric-loom' version '0.4-SNAPSHOT'
 	id 'maven-publish'
 }
 
@@ -11,12 +11,12 @@ version = project.mod_version
 group = project.maven_group
 
 dependencies {
-    minecraft "com.mojang:minecraft:20w13b"
-    mappings "net.fabricmc:yarn:20w13b+build.8:v2"
-    modImplementation "net.fabricmc:fabric-loader:0.7.8+build.189"
+    minecraft "com.mojang:minecraft:1.16.1"
+    mappings "net.fabricmc:yarn:1.16.1+build.21:v2"
+    modImplementation "net.fabricmc:fabric-loader:0.10.3+build.211"
             
     //Fabric api
-    modImplementation "net.fabricmc.fabric-api:fabric-api:0.5.6+build.313-1.16"
+    modImplementation "net.fabricmc.fabric-api:fabric-api:0.18.0+build.387-1.16.1"
 }
 
 processResources {
