--- a/gradle.properties
+++ b/gradle.properties
@@ -3,14 +3,15 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-minecraft_version=20w13b
-yarn_mappings=20w13b+build.8
-loader_version=0.7.8+build.189
+minecraft_version=1.16.1
+yarn_mappings=1.16.1+build.21
+loader_version=0.10.3+build.211
+
 # Mod Properties
-	mod_version = 0.3.1
+	mod_version = 0.4.1
 	maven_group = net.craftingspawn
 	archives_base_name = CraftingSpawn
 
 # Dependencies
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-fabric_version=0.5.6+build.313-1.16
+fabric_version=0.18.0+build.387-1.16.1
